2002-09-17  Ulrich Drepper  <drepper@redhat.com>

	* include/unistd.h: Declare __libc_pause.

	* include/sys/socket.h: Declare __libc_send, __libc_recv,
	__libc_sendto, __libc_sendmsg, __libc_recvmsg, and __libc_accept.

	* include/unistd.h: Declare __libc_fork.

2002-09-17  Roland McGrath  <roland@redhat.com>

	* sunrpc/xcrypt.c (passwd2des_internal): Renamed fom passwd2des.
	(passwd2des): Define it as an alias.
	(xencrypt, xdecrypt): Call passwd2des_internal instead of passwd2des.

2002-09-12  Bruno Haible  <bruno@clisp.org>

	* include/sys/sysctl.h (__sysctl): Add libc_hidden_proto.
	* sysdeps/unix/sysv/linux/sysctl.c (__sysctl): Add libc_hidden_def.

	* include/rpc/xdr.h (xdrstdio_create): Add libc_hidden_proto.
	* sunrpc/xdr_stdio.c (xdrstdio_create): Add libc_hidden_def.

2002-09-05  Steven Munroe  <sjmunroe@us.ibm.com>

	* sysdeps/unix/sysv/linux/kernel-features.h [__powerpc64__]
	(__ASSUME_TRUNCATE64_SYSCALL, __ASSUME_STAT64_SYSCALL, __ASSUME_IPC64,
	__ASSUME_FCNTL64, __ASSUME_MMAP2_SYSCALL): Don't define these.
	PowerPC64 does not have separate 64-bit syscalls.

2002-09-16  Roland McGrath  <roland@redhat.com>

	* sysdeps/unix/sysv/linux/powerpc/mmap64.c (__mmap64): Add a cast.

	* sysdeps/unix/sysv/linux/powerpc/powerpc32/sysdep.h (INLINE_SYSCALL):
	New macro.

	* elf/rtld.c [HP_TIMING_NONAVAIL]: Fix last change for this case.

	* include/unistd.h: Uncomment libc_hidden_proto for _exit.
	* sysdeps/mach/hurd/_exit.c: Add libc_hidden_def.
	* sysdeps/generic/_exit.c: Likewise.

2002-09-12  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/sparc/sparc32/fpu/libm-test-ulps: Regenerate.

	* elf/rtld.c (struct dl_start_final_info): New.
	(_dl_start_final): Change second argument to struct
	dl_start_final_info *.  Set start_time from info.
	(_dl_start): Remove bootstrap_map variable, add info.
	Define bootstrap_map as macro.  If not DONT_USE_BOOTSTRAP_MAP,
	store HP_TIMING_NOW result into info.start_time.

2002-09-16  Andreas Jaeger  <aj@suse.de>
